--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Homepage</title>
+    <title>Моя страница</title>
     <style>
         body { font-family: Arial, sans-serif; background-color: #f0f8ff; margin: 20px; }
         h1 { color: #2c3e50; }
@@ -13,16 +13,14 @@
     </style>
 </head>
 <body>
-    <h1>John Doe, 2nd Year, Cybersecurity Program</h1>
+    <h1>Щербаков Д.А. ПИз-221. Прикладная информатика 4 курс</h1>
     
-    <p>My level of preparation at the university: intermediate. 
-    I study at <a href="https://www.university-example.com" target="_blank">University Website</a>, expected graduation: 2026.</p>
+    <p>Мой уровень: 5/10.</p> 
+   Я студент <a href="https://kemsu.ru/"> Сайт университета</a>,Заканчиваю учебу: 2026г.</p>
     
-    <h2>My Social Networks</h2>
+    <h2>Мои социальные сети</h2>
     <ul>
         <li>🌐 <a href="https://vk.com/username" target="_blank">VK</a></li>
-        <li>📷 <a href="https://instagram.com/username" target="_blank">Instagram</a></li>
-        <li>💼 <a href="https://linkedin.com/in/username" target="_blank">LinkedIn</a></li>
         <li>🐦 <a href="https://twitter.com/username" target="_blank">Twitter</a></li>
     </ul>
 </body>
